manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simplecontainer
spec:
  selector:
    app: simplecontainer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
