manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: simplecontainer
spec:
  to:
    kind: Service
    name: simplecontainer
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
